<resources>
    <string name="app_name">shiftr</string>
    <string name="to_do_list">To Do List</string>
    <string name="inventory">Inventory</string>
    <string name="image_uploads">Image uploads</string>
    <string name="medical_reports">Medical reports</string>
    <string name="enter_phone_prompt">Enter your profession and phone number to continue</string>
    <string name="phone_number">Phone number</string>
    <string name="verify">Verify</string>
    <string name="enter_otp_prompt">Please enter the one-time password to verify your account</string>
    <string name="no_code_prompt">Didn\'t receive a code yet?</string>
    <string name="enter_valid_phone">Please enter a valid phone number to continue</string>
    <string name="priority">Priority</string>
    <string name="no_todo">You have no TODOs</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profession">Profession</string>
    <string name="add_a_todo">Add a todo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="add">Add</string>
    <string name="green">Green</string>
    <string name="items">Items</string>
    <string name="todo">Todo</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_a_todo_item">Add a todo item</string>
    <string name="add_a_task">Add a task</string>
    <string name="you_have_no_items_in_your_inventory">You have no items in your inventory</string>
    <string name="add_an_inventory_item">Add an inventory item</string>
    <string name="dashboard">Dashboard</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="completed_todos">Completed todos</string>
    <string name="pending_todos">Pending todos</string>
    <string name="inventory_items">Inventory items</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="_6_digit_otp">6 digit OTP</string>
    <string name="add_image">Add image</string>
    <string name="attach_file">Attach file</string>
</resources>